# InstituteProject-course--3-

./: .gitignore  README.md  pyproject.toml  wanted_persons.db
DB/: 3_Прикладная_Математика_3_Адмо_Турчанов_Денис_1_лабораторная_5_мая.docx  3_Прикладная_Математика_3_Адмо_Турчанов_Денис_2_лабораторная_11_мая - Copy.docx  3_Прикладная_Математика_3_Адмо_Турчанов_Денис_3_лабораторная_12_мая.docx  3_Прикладная_Математика_3_Адмо_Турчанов_Денис_4_лабораторная_15_мая.docx  3_Прикладная_Математика_3_Адмо_Турчанов_Денис_5_лабораторная_26_мая.docx  church.db
FuncAnalize/lab/: task1.py  task1Res.txt  task2.py
Java/src/ending_5/: Main.java
Java/src/lab1/: Task1.java  Task2.java  Task3.java  Task4.java  Task5.java
Java/src/lab2/: ArrayTasks.java
Java/src/lab3/: App.java  Auth.java  Cinema.java  (+6 more)
MachineLearning/lab2/: main.ipynb
MachineLearning/lab4/: main.ipynb
Microcontroller/lab1/: lab1.ino
Microcontroller/lab2/: Lab_2.ino
NumericalMethods/: tempCodeRunnerFile.py  test_tasklist_junior.docx  test_tasklist_junior_with_meme.docx  tmp.py
NumericalMethods/lab1/: graph.py  lab1.py
NumericalMethods/lab2/: lab2.py  task2.py
NumericalMethods/lab3/: lab3.py
NumericalMethods/lab4/: task1.py  task1_2.py  task2.py
NumericalMethods/lab5/: lab5.py  tempCodeRunnerFile.py
Python/: README.md
Python/lab1/: task1.py  task2.py  task3.py
Python/lab10/: task1.py  task2.py  task3.py  test.docx
Python/lab2/: README.md  task1.py  task2.py  task3.py  task4.py  task5.py
Python/lab3/: README.md  task1.py  task2.py  train.7z
Python/lab4/: README.md  task1.py  task2.py  task3.py
Python/lab5/: AudioResearch[Template].ipynb  README.md  audio_signal_analysis.ipynb
Python/lab6/: ex_1_invalid.xml  ex_2_mod.xml  task1.py  task2.py  task3.py
Python/lab7/: ex_1_invalid.json  task1.py  task2.py  task3.json  task3.py
Python/lab8/: Lab8 P4D.docx  delivery.db  task1.py  task2.py
Python/lab9/: employee_salaries_with_chart.xlsx  task1.py  task2.py  task3.py
(+21 files in other folders)
