[tool.poetry]
name = "instituteproject-course-3-"
version = "0.1.0"
description = "python course"
authors = ["Turchanov-Denis <turchanovdenis786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
audioread = "^3.0.1"
build = "^1.2.2.post1"
cachecontrol = "^0.14.0"
certifi = "^2024.8.30"
cffi = "^1.17.1"
charset-normalizer = "^3.4.0"
cleo = "^2.1.0"
colorama = "^0.4.6"
contourpy = "^1.3.0"
crashtest = "^0.4.1"
cycler = "^0.12.1"
decorator = "^4.0.2"
distlib = "^0.3.9"
dulwich = "^0.22.3"
fastjsonschema = "^2.20.0"
filelock = "^3.16.1"
fonttools = "^4.54.1"
idna = "^3.10"
imageio = "^2.36.0"
imageio-ffmpeg = "^0.5.1"
installer = "^0.7.0"
jaraco-classes = "^3.4.0"
joblib = "^1.4.2"
keyring = "^25.5.0"
kiwisolver = "^1.4.7"
lazy-loader = "^0.4"
llvmlite = "^0.43.0"
matplotlib = "^3.9.2"
more-itertools = "^10.5.0"
msgpack = "^1.1.0"
networkx = "^3.4.2"
numba = "^0.60.0"
opencv-python = "^4.10.0.84"
packaging = "^24.1"
pexpect = "^4.9.0"
pillow = "^11.0.0"
pkginfo = "^1.11.2"
platformdirs = "^4.3.6"
poetry-core = "^1.9.1"
pooch = "^1.8.2"
proglog = "^0.1.10"
ptyprocess = "^0.7.0"
pycparser = "^2.22"
pyparsing = "^3.2.0"
pyproject-hooks = "^1.2.0"
python-dateutil = "^2.9.0.post0"
pywin32-ctypes = "^0.2.3"
rapidfuzz = "^3.10.1"
requests = "^2.32.3"
requests-toolbelt = "^1.0.0"
scikit-image = "^0.24.0"
scipy = "^1.14.1"
setuptools = "^75.2.0"
shellingham = "^1.5.4"
six = "^1.16.0"
soxr = "^0.5.0.post1"
threadpoolctl = "^3.5.0"
tifffile = "^2024.9.20"
tomlkit = "^0.13.2"
tqdm = "^4.66.5"
trove-classifiers = "^2024.10.21.16"
typing-extensions = "^4.12.2"
urllib3 = "^2.2.3"
soundfile = "^0.12.1"
librosa = "^0.10.2.post1"
numpy = "2.0.0"
ipykernel = "^6.29.5"
moviepy = "^1.0.3"
chardet = "^5.2.0"
vk-api = "^11.9.9"
sympy = "^1.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
